Styles for Fusion ads and a fix for FB like button alignment.

--- a/wp-content/themes/lengstorf2014/assets/less/main.less
+++ b/wp-content/themes/lengstorf2014/assets/less/main.less
@@ -465,6 +465,34 @@ ol,ul {
 
 .fb-like {
     width: 90px;
+    >span[style] {
+        vertical-align: top!important;
+    }
+}
+
+.fusion-wrap {
+    display: block;
+    width: 140px;
+    margin-top: 20px;
+    font-size: 12px;
+    line-height: 15px;
+
+    .fusion-text {
+        display: block;
+        margin-top: 10px;
+        margin-bottom: 8px;
+        color: @gray-light;
+    }
+}
+.fusion-poweredby {
+    display: block;
+    width: 130px;
+    font-family: sans-serif;
+    font-size: 7px;
+    line-height: 10px;
+    text-transform: uppercase;
+    letter-spacing: .15em;
+    color: @gray-lighter;
 }
 
 #site-credits {
